feat (#16) added route by categories/subcategories
