# utils/schemas/categories.js
@@ -1,12 +1,13 @@
 const joi = require('@hapi/joi');
 
 const categoryIdSchema = joi.number().min(1).max(99999999999);
-const categorySchema = joi.string().min(3).max(50).required();
+const categorySchema = joi.string().min(3).max(50);
 const urlImageSchema = joi.string().uri().trim();
 const activeSchema = joi.number().min(0).max(1);
+const pageSchema =  joi.number().integer().min(1);
 
 const createCategorySchema = {
-  category: categorySchema,
+  category: categorySchema.required(),
   url_image: urlImageSchema.required(),
   active: activeSchema,
 };
@@ -15,9 +16,16 @@ const updateCategorySchema = {
   url_image: urlImageSchema,
   active: activeSchema,
 };
-
+const filterSchema = {
+  category: categorySchema,
+  active: activeSchema,
+  order: joi.string().min(3).max(4),
+  page: pageSchema,
+  limit: pageSchema,
+};
 module.exports = {
   categoryIdSchema,
   createCategorySchema,
   updateCategorySchema,
+  filterSchema,
 };
